--- a/blog/css/blog.scss
+++ b/blog/css/blog.scss
@@ -271,7 +271,7 @@ $color-blog-subscribe: #dfe9e0;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition: all ease-in-out 0.3s;
+        transition: scale ease-in-out 0.3s;
 
         &:not(.loaded) {
           width: 10%;
@@ -357,7 +357,7 @@ $color-blog-subscribe: #dfe9e0;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        transition: all ease-in-out 0.3s;
+        transition: scale ease-in-out 0.3s;
 
         &:not(.loaded) {
           width: 10%;
@@ -604,7 +604,11 @@ $color-blog-subscribe: #dfe9e0;
     padding: 10px;
     border-radius: 10px;
     background: $blog-head-gradient;
-    z-index: 1041;
+    z-index: 0;
+
+    &:has(.in) {
+      z-index: 1041;
+    }
 
     .blog__header-link {
       display: grid;
@@ -1109,7 +1113,7 @@ $color-blog-subscribe: #dfe9e0;
     }
 
     .small {
-      margin-top: -2px;
+      margin-top: 2px;
       width: 34px;
       height: 34px;
     }
